--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Alex-GF/space-node-client#readme",
   "dependencies": {
+    "axios": "^1.9.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
