--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tsx": "^4.19.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.31.0",
+    "uuid": "^11.1.0",
     "vitest": "^3.1.2"
   }
 }
