--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.15.21",
     "@vitest/coverage-v8": "^3.1.2",
     "dotenv": "^16.5.0",
     "husky": "^8.0.3",
+    "js-yaml": "^4.1.0",
     "prettier": "^3.0.3",
     "tsx": "^4.19.3",
     "typescript": "^5.3.3",
