--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,7 +4,9 @@ on:
     types: [created]
 jobs:
   publish-npm:
+    name: Deployment to NPM
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
