--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "space-node-client",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "./dist/main/index.js",
+  "module": "./dist/main/index.js",
+  "types": "dist/main/types.d.ts",
   "type": "module",
+  "exports": {
+    "import": "./dist/main/index.js",
+    "require": "./dist/main/index.js"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias && add-import-extension dist --ext .js",
+    "dev": "tsc --watch & tsc-alias --watch --project=\"./tsconfig.json\" --resolve-full-paths",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest --run"
@@ -50,6 +57,7 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.31.0",
     "uuid": "^11.1.0",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "tsc-alias": "^1.8.8"
   }
 }
