--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,11 +15,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
   
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
   
-      - name: Run Tests
-        run: npm run test:small
-
       - name: Build Package
         run: npm run build
         
