--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "space-node-client",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "",
   "main": "./dist/main/index.js",
   "module": "./dist/main/index.js",
@@ -9,8 +9,7 @@
   "exports": {
     ".": {
       "import": "./dist/main/index.js",
-      "require": "./dist/main/index.js",
-      "types": "./dist/main/types.d.ts"
+      "require": "./dist/main/index.js"
     }
   },
   "files": ["dist", "README.md", "LICENSE"],
