--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "space-node-client",
   "type": "module",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "",
   "main": "dist/main/index.js",
   "module": "dist/main/index.js",
@@ -12,7 +12,12 @@
       "require": "./dist/main/index.js"
     }
   },
-  "files": ["dist", "!dist/test", "README.md", "LICENSE"],
+  "files": [
+    "dist",
+    "!dist/test",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc && tsc-alias --project=\"./tsconfig.json\" --resolve-full-paths",
     "dev": "tsc --watch & tsc-alias --watch --project=\"./tsconfig.json\" --resolve-full-paths",
@@ -45,6 +50,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "form-data": "^4.0.2",
+    "redis": "^5.5.6",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
@@ -56,11 +62,11 @@
     "husky": "^8.0.3",
     "js-yaml": "^4.1.0",
     "prettier": "^3.0.3",
+    "tsc-alias": "^1.8.8",
     "tsx": "^4.19.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.31.0",
     "uuid": "^11.1.0",
-    "vitest": "^3.1.2",
-    "tsc-alias": "^1.8.8"
+    "vitest": "^3.1.2"
   }
 }
